--- a/lib/tinymce/jscripts/tiny_mce/plugins/jbimages/dialog.htm
+++ b/lib/tinymce/jscripts/tiny_mce/plugins/jbimages/dialog.htm
@@ -15,8 +15,12 @@
 	<h1>{#jbimages_dlg.select_an_image}</h1>
 	<p><input id="uploader" name="userfile" type="file" class="jbFilebox" onChange="document.upl.submit(); jbImagesDialog.inProgress();" /></p>
 	<p><input type="submit" value="{#jbimages_dlg.upload}" class="jbButton" /></p>
-	<p id="the_plugin_name"><a href="http://justboil.me/tinymce-images-plugin/" target="_blank" title="JustBoil.me Images - a TinyMCE Images Upload Plugin">JustBoil.me Images Plugin</a></p>
 </form></div>
+
+<a href="ci/index.php/listImages/" id="manage">{#jbimages_dlg.manage}</a>
+
+<p id="the_plugin_name"><a href="http://justboil.me/tinymce-images-plugin/" target="_blank" title="JustBoil.me Images - a TinyMCE Images Upload Plugin">JustBoil.me Images Plugin</a></p>
+
 <iframe id="upload_target" name="upload_target" src="ci/index.php/blank"></iframe>
 </body>
 </html>
